# assessment_test

RSE_Assessment/: graph.g2o  graph.g2o.kernels  special_nodes.csv
RSE_Assessment/000000/: cloud.pcd  data
RSE_Assessment/000001/: cloud.pcd  data
RSE_Assessment/000002/: cloud.pcd  data
RSE_Assessment/000003/: cloud.pcd  data
RSE_Assessment/000004/: cloud.pcd  data
RSE_Assessment/000005/: cloud.pcd  data
RSE_Assessment/000006/: cloud.pcd  data
RSE_Assessment/000007/: cloud.pcd  data
RSE_Assessment/000008/: cloud.pcd  data
RSE_Assessment/000009/: cloud.pcd  data
RSE_Assessment/000010/: cloud.pcd  data
RSE_Assessment/000011/: cloud.pcd  data
RSE_Assessment/000012/: cloud.pcd  data
RSE_Assessment/000013/: cloud.pcd  data
RSE_Assessment/000014/: cloud.pcd  data
RSE_Assessment/000015/: cloud.pcd  data
RSE_Assessment/000016/: cloud.pcd  data
RSE_Assessment/000017/: cloud.pcd  data
RSE_Assessment/000018/: cloud.pcd  data
RSE_Assessment/000019/: cloud.pcd  data
RSE_Assessment/000020/: cloud.pcd  data
RSE_Assessment/000021/: cloud.pcd  data
RSE_Assessment/000022/: cloud.pcd  data
RSE_Assessment/000023/: cloud.pcd  data
RSE_Assessment/000024/: cloud.pcd  data
RSE_Assessment/000025/: cloud.pcd  data
RSE_Assessment/000026/: cloud.pcd  data
RSE_Assessment/000027/: cloud.pcd  data
RSE_Assessment/000028/: cloud.pcd  data
RSE_Assessment/000029/: cloud.pcd  data
RSE_Assessment/000030/: cloud.pcd  data
RSE_Assessment/000031/: cloud.pcd  data
RSE_Assessment/000032/: cloud.pcd  data
RSE_Assessment/000033/: cloud.pcd  data
RSE_Assessment/000034/: cloud.pcd  data
RSE_Assessment/000035/: cloud.pcd  data
RSE_Assessment/000036/: cloud.pcd  data
RSE_Assessment/000037/: cloud.pcd  data
RSE_Assessment/000038/: cloud.pcd  data
RSE_Assessment/000039/: cloud.pcd  data
RSE_Assessment/000040/: cloud.pcd  data
RSE_Assessment/000041/: cloud.pcd  data
RSE_Assessment/000042/: cloud.pcd  data
RSE_Assessment/000043/: cloud.pcd  data
RSE_Assessment/000044/: cloud.pcd  data
RSE_Assessment/000045/: cloud.pcd  data
RSE_Assessment/000046/: cloud.pcd  data
RSE_Assessment/000047/: cloud.pcd  data
RSE_Assessment/000048/: cloud.pcd  data
RSE_Assessment/000049/: cloud.pcd  data
RSE_Assessment/000050/: cloud.pcd  data
RSE_Assessment/000051/: cloud.pcd  data
RSE_Assessment/000052/: cloud.pcd  data
RSE_Assessment/000053/: cloud.pcd  data
RSE_Assessment/000054/: cloud.pcd  data
RSE_Assessment/000055/: cloud.pcd  data
RSE_Assessment/000056/: cloud.pcd  data
RSE_Assessment/000057/: cloud.pcd  data
RSE_Assessment/000058/: cloud.pcd  data
RSE_Assessment/000059/: cloud.pcd  data
RSE_Assessment/000060/: cloud.pcd  data
RSE_Assessment/000061/: cloud.pcd  data
RSE_Assessment/000062/: cloud.pcd  data
RSE_Assessment/000063/: cloud.pcd  data
RSE_Assessment/000064/: cloud.pcd  data
RSE_Assessment/000065/: cloud.pcd  data
RSE_Assessment/000066/: cloud.pcd  data
RSE_Assessment/000067/: cloud.pcd  data
RSE_Assessment/000068/: cloud.pcd  data
RSE_Assessment/000069/: cloud.pcd  data
RSE_Assessment/000070/: cloud.pcd  data
RSE_Assessment/000071/: cloud.pcd  (+1 more)
RSE_Assessment/RSE_ws/src/SLAM/map_saver/: CMakeLists.txt  package.xml
RSE_Assessment/RSE_ws/src/SLAM/map_saver/src/: map_saver.cpp  map_twod_saver.cpp  odom.cpp
RSE_Assessment/RSE_ws/src/teleop_steer_bot/: CMakeLists.txt  package.xml
RSE_Assessment/RSE_ws/src/teleop_steer_bot/src/: teleop.cpp
(+835 files in other folders)
