<?xml version="1.0"?>
<package format="2">
  <name>teleop_steer_bot</name>
  <version>0.0.0</version>
  <description>The teleop package for controlling the robot with w, a, s, d keys.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
  </export>
</package>

